--- a/08_process.ipynb
+++ b/08_process.ipynb
@@ -1547,6 +1547,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Apparently it broke. Too lazy to fix as it didn't work well anyways.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -1786,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +1866,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
     "\n",
     "tickers_v3 = get_tickers(v=3)\n",
@@ -1867,7 +1873,7 @@
     "tickers_v3[\"end_data\"] = np.nan\n",
     "\n",
     "for index, row in tickers_v3.iterrows():\n",
-    "    id = row['ID'] # Remove parquet extension\n",
+    "    id = row['ID']\n",
     "    try:\n",
     "        dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{id}.parquet\")\n",
     "    except FileNotFoundError:\n",
@@ -1885,8 +1891,7 @@
     "    start_data = min_date.to_pydatetime().date()\n",
     "    end_data = max_date.to_pydatetime().date()\n",
     "    \n",
-    "    tickers_v3.loc[id, [\"start_data\", \"end_data\"] ] = [start_data, end_data]\n",
-    "\n",
+    "    tickers_v3.loc[tickers_v3['ID'] == id, [\"start_data\", \"end_data\"] ] = [start_data, end_data]\n",
     "    print(index)\n",
     "\n",
     "tickers_v3.reset_index(inplace=True)\n",
@@ -1895,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1972,10 +1977,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                ID ticker                       name active  start_date  \\\n",
-       "0     A-2019-01-01      A  Agilent Technologies Inc.   True  2019-01-01   \n",
-       "1    AA-2019-01-01     AA          Alcoa Corporation   True  2019-01-01   \n",
-       "2  AABA-2019-01-01   AABA   Altaba Inc. Common Stock  False  2019-01-01   \n",
+       "                ID ticker                       name  active  start_date  \\\n",
+       "0     A-2019-01-01      A  Agilent Technologies Inc.    True  2019-01-01   \n",
+       "1    AA-2019-01-01     AA          Alcoa Corporation    True  2019-01-01   \n",
+       "2  AABA-2019-01-01   AABA   Altaba Inc. Common Stock   False  2019-01-01   \n",
        "\n",
        "     end_date  start_data    end_data type  \n",
        "0  2023-09-07  2019-01-02  2023-09-07   CS  \n",
@@ -1983,7 +1988,7 @@
        "2  2019-10-04  2019-01-02  2019-10-02   CS  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,14 +2009,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "801\n"
+      "38\n"
      ]
     },
     {
@@ -2048,37 +2053,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AACQ-2020-09-04</td>\n",
-       "      <td>AACQ</td>\n",
-       "      <td>Artius Acquisition Inc. Class A Common Stock</td>\n",
+       "      <th>106</th>\n",
+       "      <td>ACRV-2022-11-10</td>\n",
+       "      <td>ACRV</td>\n",
+       "      <td>Acrivon Therapeutics, Inc. Common Stock</td>\n",
        "      <td>False</td>\n",
-       "      <td>2020-09-04</td>\n",
-       "      <td>2021-06-24</td>\n",
+       "      <td>2022-11-10</td>\n",
+       "      <td>2022-11-11</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>AAXN-2019-01-01</td>\n",
-       "      <td>AAXN</td>\n",
-       "      <td>Axon Enterprise, Inc. Common Stock</td>\n",
+       "      <th>177</th>\n",
+       "      <td>AEON-2021-10-08</td>\n",
+       "      <td>AEON</td>\n",
+       "      <td>AEON Biopharma, Inc. Common Stock</td>\n",
        "      <td>False</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2021-01-25</td>\n",
+       "      <td>2021-10-08</td>\n",
+       "      <td>2021-10-13</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>ACAC-2020-12-11</td>\n",
-       "      <td>ACAC</td>\n",
-       "      <td>Acies Acquisition Corp. Class A Ordinary Share</td>\n",
+       "      <th>195</th>\n",
+       "      <td>AFCG-2021-02-11</td>\n",
+       "      <td>AFCG</td>\n",
+       "      <td>AFC Gamma, Inc. Common Stock</td>\n",
        "      <td>False</td>\n",
-       "      <td>2020-12-11</td>\n",
-       "      <td>2021-06-21</td>\n",
+       "      <td>2021-02-11</td>\n",
+       "      <td>2021-02-18</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
@@ -2088,18 +2093,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                 ID ticker                                            name  \\\n",
-       "7   AACQ-2020-09-04   AACQ    Artius Acquisition Inc. Class A Common Stock   \n",
-       "24  AAXN-2019-01-01   AAXN              Axon Enterprise, Inc. Common Stock   \n",
-       "56  ACAC-2020-12-11   ACAC  Acies Acquisition Corp. Class A Ordinary Share   \n",
+       "                  ID ticker                                     name  active  \\\n",
+       "106  ACRV-2022-11-10   ACRV  Acrivon Therapeutics, Inc. Common Stock   False   \n",
+       "177  AEON-2021-10-08   AEON        AEON Biopharma, Inc. Common Stock   False   \n",
+       "195  AFCG-2021-02-11   AFCG             AFC Gamma, Inc. Common Stock   False   \n",
        "\n",
-       "   active  start_date    end_date start_data end_data type  \n",
-       "7   False  2020-09-04  2021-06-24        NaT      NaT   CS  \n",
-       "24  False  2019-01-01  2021-01-25        NaT      NaT   CS  \n",
-       "56  False  2020-12-11  2021-06-21        NaT      NaT   CS  "
+       "     start_date    end_date start_data end_data type  \n",
+       "106  2022-11-10  2022-11-11        NaT      NaT   CS  \n",
+       "177  2021-10-08  2021-10-13        NaT      NaT   CS  \n",
+       "195  2021-02-11  2021-02-18        NaT      NaT   CS  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,204 +2134,6 @@
     "Not implemented. However, we should only process the tickers that had splits/divs in the update period. The rest only has to be reindex/filled+flagged. Then appended.\n",
     "\n",
     "For now, just rerun everything after updating END_DATE."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_calendar\n",
-    "from datetime import datetime, date, time\n",
-    "import mplfinance as mpf\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "DATA_PATH = \"../data/polygon/\"\n",
-    "END_DATE = date(2023, 9, 7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tickers_v4 = get_tickers(v=4)\n",
-    "market_dates = get_market_dates()\n",
-    "ticker_changes = get_ticker_changes()\n",
-    "\n",
-    "tickers_v4.insert(loc = 2, column = 'tickers_old', value = [[] for _ in range(len(tickers_v4))])\n",
-    "\n",
-    "while True:\n",
-    "    # tickers_v4 gets smaller by 1 element every time we run this loop.\n",
-    "    for index_from, row_from in tickers_v4.copy().iterrows():\n",
-    "        # Get values\n",
-    "        type_from = row_from['type']\n",
-    "        if type_from == \"INDEX\":\n",
-    "            continue\n",
-    "        id_from = row_from['ID']\n",
-    "        ticker_from = row_from['ticker']\n",
-    "        start_date_from = row_from['start_date']\n",
-    "        end_date_from = row_from['end_date']\n",
-    "        start_data_from = row_from['start_data']\n",
-    "        end_data_from = row_from['end_data']\n",
-    "        if end_data_from == END_DATE:\n",
-    "            continue\n",
-    "\n",
-    "        start_data_to = market_dates[market_dates.index(end_data_from) + 1]\n",
-    "\n",
-    "        # Get ticker changes \n",
-    "        change = ticker_changes[(ticker_changes.index == start_data_to) & (ticker_changes['from'] == ticker_from)]\n",
-    "        if change.empty:\n",
-    "            continue\n",
-    "        elif len(change) > 1:\n",
-    "            raise Exception(\"Duplicate!\")\n",
-    "        ticker_to = change['to'].values[0]\n",
-    "\n",
-    "        # Set values of new ticker\n",
-    "        row_to = tickers_v4[(tickers_v4['start_data'] == start_data_to) & (tickers_v4['ticker'] == ticker_to)]\n",
-    "        if row_to.empty:\n",
-    "            continue\n",
-    "        index_to = row_to.index[0]\n",
-    "        id_to = row_to['ID'].values[0]\n",
-    "        tickers_v4.loc[index_to, \"tickers_old\"].append([start_data_to.isoformat(), ticker_from])\n",
-    "        tickers_v4.loc[index_to, \"start_date\"] = start_date_from\n",
-    "        tickers_v4.loc[index_to, \"start_data\"] = start_data_from\n",
-    "\n",
-    "        # Do the actual merging\n",
-    "        from_ = pd.read_parquet(DATA_PATH + f\"processed/m1/{id_from}.parquet\")\n",
-    "        to = pd.read_parquet(DATA_PATH + f\"processed/m1/{id_to}.parquet\")\n",
-    "\n",
-    "        # Because companies like to be annoying, a split/dividend can take place at the same time as a ticker change. We have to account for this. An example is TYDE -> OCTO with a 50:1 reverse split. However this is much easier than 5_process_raw_data.ipynb, because there is at most a single split. This is rare, but there are still a handful of cases.\n",
-    "        if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker_to}.csv\"):\n",
-    "            adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker_to}.csv\", parse_dates=True, index_col=0)\n",
-    "            adjustments.index = pd.to_datetime(adjustments.index).date\n",
-    "            adjustments = adjustments[(adjustments.index == start_data_to)]\n",
-    "\n",
-    "            # SPLIT ADJUSTMENT\n",
-    "            split = adjustments[adjustments.type == 'SPLIT']\n",
-    "            if len(split) > 0:\n",
-    "                split_amount = split['amount'][0]\n",
-    "\n",
-    "                from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(split_amount)\n",
-    "                from_['volume'] = from_['volume'].divide(split_amount)\n",
-    "\n",
-    "            # DIVIDEND ADJUSTMENT - REUN is the only case, not clear what happened there.\n",
-    "            dividend = adjustments[adjustments.type == 'DIV']\n",
-    "            if len(dividend) > 0:\n",
-    "                print(ticker_to)\n",
-    "                market_hours = get_market_calendar()\n",
-    "                market_hours = market_hours[['regular_close']]\n",
-    "\n",
-    "                cum_div_date = end_data_from\n",
-    "                cum_div_time = market_hours.loc[cum_div_date][0]\n",
-    "                cum_div_datetime = datetime.combine(cum_div_date, cum_div_time)\n",
-    "                cum_div_datetime = (from_[from_.index <= cum_div_datetime].index).max()\n",
-    "                cum_div_close = from_.loc[cum_div_datetime, 'close']\n",
-    "                dividend = dividend['amount'][0]\n",
-    "                    \n",
-    "                adjustment_factor = 1 - dividend/cum_div_close\n",
-    "\n",
-    "                from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(adjustment_factor)\n",
-    "                from_['volume'] = from_['volume'].divide(adjustment_factor)\n",
-    "                from_ = round(from_, 4)\n",
-    "                from_['volume'] = from_['volume'].astype(int)\n",
-    "            \n",
-    "            # ROUNDING\n",
-    "            if len(split) > 0 or len(dividend) > 0:\n",
-    "                from_ = round(from_, 4)\n",
-    "                from_['volume'] = from_['volume'].astype(int)\n",
-    "\n",
-    "        # If on the old ticker, there are divs/splits on start_data_to (start of new ticker), then something is wrong.\n",
-    "        if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\"):\n",
-    "            adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\", parse_dates=True, index_col=0)\n",
-    "            adjustments.index = pd.to_datetime(adjustments.index).date\n",
-    "            adjustments = adjustments[(adjustments.index == start_data_to)]\n",
-    "            assert len(adjustments) == 0\n",
-    "\n",
-    "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{id_to}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "        # pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
-    "\n",
-    "        # Delete old ticker from ticker list. You can also remove the files, but that is not necessary. In backtesting you will always loop over the ticker list and not over de files in the folder.\n",
-    "        os.remove(path = DATA_PATH + f\"processed/m1/{id_from}.parquet\") # Removal of old renamed ticker (not necessary)\n",
-    "        tickers_v4.drop(index_from, inplace=True)\n",
-    "        tickers_v4.reset_index(inplace=True, drop=True)\n",
-    "        print(f\"Ticker change {ticker_from} -> {ticker_to} on {start_data_to} has been processed\")\n",
-    "        print(f\"{index_from/len(tickers_v4)*100:.1f}% | Length of tickers_v4 is {len(tickers_v4)}\")\n",
-    "        break\n",
-    "    \n",
-    "    # If we have reached the end of the loop, it means we have processed everything. Then we can stop.\n",
-    "    if index_from >= (len(tickers_v4)-1):\n",
-    "        break\n",
-    "\n",
-    "tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import remove_extended_hours\n",
-    "from datetime import datetime\n",
-    "import mplfinance as mpf\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "DATA_PATH = \"../data/polygon/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_files = os.listdir(DATA_PATH + f'processed/m1/')\n",
-    "for index, file in enumerate(all_files):\n",
-    "    ticker = file[:-19] # Remove date and parquet extension\n",
-    "\n",
-    "    bars = pd.read_parquet(DATA_PATH + f'processed/m1/{file}')\n",
-    "\n",
-    "    # In the backtester we will use the opening price of the next bar to trade. So 'tradeable' has to be based on the first 1-minute bar within each 5-minute interval for 5-minute bars. However your approach might be different. If you use closing prices, you should use the last 1-minute bar.\n",
-    "    m5 = bars.resample('5Min').agg({'open': 'first', \n",
-    "                                    'high': 'max', \n",
-    "                                    'low': 'min',\n",
-    "                                    'close': 'last',\n",
-    "                                    'close_original': 'last',\n",
-    "                                    'volume': 'sum',\n",
-    "                                    'tradeable': 'first',\n",
-    "                                    'halted': 'first'})\n",
-    "    # Pandas aggregation also adds non-trading days and times back. These can be easily removed by removing the NA values, because the first/max/min/last of nothing is NA. Also booleans are converted into 0/1, which has to be converted back.\n",
-    "    m5 = m5.dropna()\n",
-    "    m5['tradeable'] = m5['tradeable'].astype('bool')\n",
-    "    m5['halted'] = m5['halted'].astype('bool')      \n",
-    "    m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "    #m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
-    "\n",
-    "    # For the daily, we only consider a bar untradeable if it has zero trade prices. So if all \"tradeable\" is False. Also we only consider regular trading hours.\n",
-    "    bars = remove_extended_hours(bars)\n",
-    "    d1 = bars.resample('D').agg({'open': 'first', \n",
-    "                                 'high': 'max', \n",
-    "                                 'low': 'min',\n",
-    "                                 'close': 'last',\n",
-    "                                 'close_original': 'last',\n",
-    "                                 'volume': 'sum',\n",
-    "                                 'tradeable': 'max',\n",
-    "                                 'halted': 'min'})\n",
-    "    d1 = d1.dropna()\n",
-    "    d1['tradeable'] = d1['tradeable'].astype('bool')\n",
-    "    d1['halted'] = d1['halted'].astype('bool')   \n",
-    "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "    #d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)"
    ]
   },
   {
