--- a/12_screeners.ipynb
+++ b/12_screeners.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,20 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-03\n",
-      "['TSLA-2019-01-01', 'NVDA-2019-01-01', 'AAPL-2019-01-01', 'MSFT-2019-01-01', 'AMD-2019-01-01']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "day, data = get_top_n_liquid(date(2023, 8, 25), n=100)\n",
+    "day, data = get_top_n_liquid(date(2023, 8, 25), n=3000)\n",
     "print(day)\n",
     "print(data[:5])"
    ]
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,12 +195,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "store_top_movers(sign = '+', percentage = 20, time_ = time(16, 29), start = date(2019, 1, 1), end = date(2023, 9, 1))"
+    "store_top_movers(sign = '+', percentage = 20, time_ = time(13, 00), start = date(2019, 1, 1), end = date(2023, 9, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +232,9 @@
     "        if daily.empty or minute.empty:\n",
     "            continue\n",
     "\n",
-    "        # TO REMOVE\n",
-    "        minute = minute[~minute.index.duplicated()]\n",
-    "        daily = daily[~daily.index.duplicated()]\n",
+    "        # # TO REMOVE\n",
+    "        # minute = minute[~minute.index.duplicated()]\n",
+    "        # daily = daily[~daily.index.duplicated()]\n",
     "\n",
     "        # Build our data for this ticker\n",
     "        data = minute.between_time(time_, time_)\n",
