--- a/13_backtesting.ipynb
+++ b/13_backtesting.ipynb
@@ -1137,32 +1137,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 13.2 S&P500 vs TOP500\n",
-    "There should be small differences between the top 500 most liquid stocks and the S&P500. Although for fair comparison we should take the equally weighted S&P500."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "DATA_PATH = \"../data/polygon/\"\n",
+    "\n",
     "def get_top_n_liquid(day, n=500):\n",
-    "    \"\"\"Retrieve the top liquid N stocks. If no cache exists, calculate them.\n",
-    "\n",
-    "    Args:\n",
-    "        day (date): the date to query\n",
-    "        n (int, optional): the amount of stocks to query. Defaults to 500.\n",
-    "\n",
-    "    Returns:\n",
-    "        list: list of IDs\n",
-    "    \"\"\"\n",
-    "    if not os.path.isfile(DATA_PATH + f'processed/cache/top_{n}_liquid.json'):\n",
-    "        store_top_n_liquid(n)\n",
-    "        \n",
     "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'r') as f:\n",
     "        data = json.load(f)\n",
     "\n",
