--- a/13_backtesting.ipynb
+++ b/13_backtesting.ipynb
@@ -1203,7 +1203,7 @@
    "source": [
     "# Loop over all quarters, aggregate and average.\n",
     "for date_start, date_end in zip(quarter_start, quarter_end):\n",
-    "    print(f\"{date_start} to {date_end}\")\n"
+    "    print(f\"{date_start} to {date_end}\")"
    ]
   }
  ],
